2016-07-04  Karl Berry  <karl@freefriends.org>

	* tex4ht-mkht.tex: don't hardwire c: paths.

2016-07-03  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex,
	* tex4ht-auto-script.tex,
	* tex4ht-env.tex,
	* tex4ht-sty.tex: remove nonascii chars in comments.

2016-07-02  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (lettrine.4ht): delete the .lettrine-Agrave css
	with literal Agraves, to avoid encoding agony.  Update copyright.

2016-07-01  Karl Berry  <karl@freefriends.org>

	* tex4ht-sty.tex (tex4ht.sty),
	* tex4ht-4ht.tex (usepackage.4ht): unify copyright notices.	

2016-06-30  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (latex.4ht): unify copyright notice.

2016-06-30  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (latex.4ht): added \hbox{} to active
	hyphen in order to prevent ligatures in environments defined
	with \ScriptEnv.
        <https://puszcza.gnu.org.ua/bugs/?319>

2016-06-16  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): added \par command to sectioning
	commands, text can be outside paragraphs otherwise.
	<https://puszcza.gnu.org.ua/bugs/?279>

2016-06-16  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (html4.4ht): Replaced non-breaking Unicode space with
	normal spaces.
	<https://puszcza.gnu.org.ua/bugs/?316>

2016-06-16  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex: Fixed lstinline configuration - spurious \aftergroup.

2016-06-15  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): Fixed configurations for
	algorithmic package - indentation and line number align.
	<https://puszcza.gnu.org.ua/bugs/index.php?314>

2016-06-15  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex,
	* tex4ht-misc.tex: move definitions for lettrine to tex4ht-4ht.tex.
	* Makefile: don't compile tex4ht-misc.tex, it causes overwritting of
	mktex4ht.cnf.

2016-06-10  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex,
	* tex4ht-html-speech.tex,