@@ -74,7 +74,7 @@
 
 \<emacspeak\><<<
 % emacspeak.4ht (|version), generated from |jobname.tex
-% Copyright 2009-2015 TeX Users Group
+% Copyright 2009-2016 TeX Users Group
 % Copyright |CopyYear.2006. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
