@@ -2,7 +2,7 @@
 % compile 3 times: latex tex4ht-mathltx
 %           or   xhlatex tex4ht-mathltx "html,3,sections+"
 %
-% Copyright 2009-2014 TeX Users Group
+% Copyright 2009-2016 TeX Users Group
 % Copyright 2005-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -395,14 +395,10 @@ display="inline"
 
 \<html-mltx\><<<
 % html-mltx.4ht (|version), generated from |jobname.tex
-% Copyright 2009-2014 TeX Users Group
+% Copyright 2009-2016 TeX Users Group
 % Copyright |CopyYear.2005. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
-
-
-
-
 
 \<configure mathltx tex4ht\><<<
 |<tex compiler mathltx|>
